Add Terraform Cognito Group resource with basic tests and docs

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -487,6 +487,9 @@
                         <li<%= sidebar_current("docs-aws-resource-cognito-user-pool") %>>
                             <a href="/docs/providers/aws/r/cognito_user_pool.html">aws_cognito_user_pool</a>
                         </li>
+                        <li<%= sidebar_current("docs-aws-resource-cognito-group") %>>
+                            <a href="/docs/providers/aws/r/cognito_group.html">aws_cognito_group</a>
+                        </li>
                     </ul>
                 </li>
 
